--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,25 +1,40 @@
-<div class="container">
-  <nav class="navbar navbar-default">
-    <ul class="nav navbar-nav">
-      <li>
-        <a [routerLink]="['/activity']" routerLinkActive="active">Activity</a>
-      </li>
-      <li>
-        <a [routerLink]="['/info']" routerLinkActive="active">Info</a>
-      </li>
-      <li>
-        <a [routerLink]="['/posts']" routerLinkActive="active">Posts</a>
-      </li>
-      <li>
-        <a [routerLink]="['/employee-detail']" routerLinkActive="active"
-          >Employee Detail</a
-        >
-      </li>
-      <li>
-        <a [routerLink]="['/employee-list']" routerLinkActive="active"
-          >Employee List</a
-        >
-      </li>
-    </ul>
-  </nav>
+<div *ngFor="let user of usersArray">
+  <div>
+    {{ user.id }}
+  </div>
+  <div>
+    <img src="{{ user.image }}" />
+  </div>
+  <div>
+    {{ user.firstName }}
+  </div>
+  <div>
+    {{ user.lastName }}
+  </div>
 </div>
+
+<!-- <div>
+  {{ usersArray[0].id }}
+</div>
+<div>
+  <img src="{{ usersArray[0].image }}" />
+</div>
+<div>
+  {{ usersArray[0].firstName }}
+</div>
+<div>
+  {{ usersArray[0].lastName }}
+</div>
+
+<div>
+  {{ usersArray[1].id }}
+</div>
+<div>
+  <img src="{{ usersArray[1].image }}" />
+</div>
+<div>
+  {{ usersArray[1].firstName }}
+</div>
+<div>
+  {{ usersArray[1].lastName }}
+</div> -->
